tests/samples/invalid/endless_array_as_variable.pn
fn foo()
{
	var legal: &[..]i32;
	var illegal_because_infinite_size: [..]i32;
}
